--- a/LimenawebApp/Views/Management/Users.cshtml
+++ b/LimenawebApp/Views/Management/Users.cshtml
@@ -131,6 +131,7 @@
 
                                 <option>Customer</option>
                                 <option>Inventory</option>
+                                <option>ExternalApps</option>
 
                         </select>
 
@@ -161,7 +162,9 @@
                                 <option>Bonifications Emails</option>
                                 <option>Credits Authorizer</option>
                             </optgroup>
-
+                            <optgroup label="General">
+                                <option>Cognos</option>
+                            </optgroup>
 
 
                         </select>
@@ -219,6 +222,7 @@
                             <option>Sales</option>
                             <option>Customer</option>
                             <option>Inventory</option>
+                            <option>ExternalApps</option>
                         </select>
 
                         <label class="col-form-label">Roles:</label>
@@ -250,7 +254,9 @@
                                 <option>Bonifications Emails</option>
                                 <option>Credits Authorizer</option>
                             </optgroup>
-
+                            <optgroup label="General">
+                                <option>Cognos</option>
+                            </optgroup>
 
                         </select>
                         <label class="col-form-label">Assigned Users:</label>
