--- a/LimenawebApp/Views/Main/Dashboard_customers.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard_customers.cshtml
@@ -39,8 +39,8 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-12">
-                                    <table id="tablaordenesbon" class="table table-striped" >
+                                <div class="table-responsive">
+                                    <table id="tablaordenesbon" class="table table-striped" style="width:100%">
                                         <thead>
                                             <tr>
                                                 <th>
