--- a/LimenawebApp/Views/Operations/new_Data.cshtml
+++ b/LimenawebApp/Views/Operations/new_Data.cshtml
@@ -396,59 +396,7 @@
 
         });
 
-            //var dataCategory = [];
 
-            //if ($("#lstCategory").select2('data').length) {
-
-            //    $.each($("#lstCategory").select2('data'), function (key, item) {
-
-            //        dataCategory.push(item.text);
-
-            //    });
-
-            //}
-
-
-
-            //var dataSubCategory = [];
-
-            //if ($("#lstSubCategory").select2('data').length) {
-
-            //    $.each($("#lstSubCategory").select2('data'), function (key, item) {
-
-            //        dataSubCategory.push(item.text);
-
-            //    });
-
-            //}
-
-
-
-            //var dataProvider = [];
-
-            //if ($("#lstProvider").select2('data').length) {
-
-            //    $.each($("#lstProvider").select2('data'), function (key, item) {
-
-            //        dataProvider.push(item.text);
-
-            //    });
-
-            //}
-
-
-
-            //var dataBrands = [];
-
-            //if ($("#lstBrands").select2('data').length) {
-
-            //    $.each($("#lstBrands").select2('data'), function (key, item) {
-
-            //        dataBrands.push(item.text);
-
-            //    });
-
-            //}
 
 
     $("#btnsaveproducts").click(function () {
@@ -470,7 +418,59 @@
                         var data;
                         data = Array();
 
+                                    var dataCategory = [];
 
+            if ($("#lstCategory").select2('data').length) {
+
+                $.each($("#lstCategory").select2('data'), function (key, item) {
+
+                    dataCategory.push(item.text);
+
+                });
+
+            }
+
+
+
+            var dataSubCategory = [];
+
+            if ($("#lstSubCategory").select2('data').length) {
+
+                $.each($("#lstSubCategory").select2('data'), function (key, item) {
+
+                    dataSubCategory.push(item.text);
+
+                });
+
+            }
+
+
+
+            var dataProvider = [];
+
+            if ($("#lstProvider").select2('data').length) {
+
+                $.each($("#lstProvider").select2('data'), function (key, item) {
+
+                    dataProvider.push(item.text);
+
+                });
+
+            }
+
+
+
+            var dataBrands = [];
+
+            if ($("#lstBrands").select2('data').length) {
+
+                $.each($("#lstBrands").select2('data'), function (key, item) {
+
+                    dataBrands.push(item.text);
+
+                });
+
+            }
 
                         $("#data_tableEditor2 tr").each(function (i, v) {
                             data[i] = Array();
@@ -513,9 +513,9 @@
     
                             $.ajax
                             ({
-                                    url: '/Inventory/Save_Details',
+                                    url: '/Operations/Save_DataProcess',
                                 type: 'POST',
-                                    data: { 'objects': objects, 'maxcounts': times, 'idproj':project },
+                                    data: { 'objects': objects, 'Categories': dataCategory.toString(), 'Subcategories': dataSubCategory.toString(), 'Providers': dataProvider.toString(), 'Brands': dataBrands.toString()},
                                 success: function (result) {
 
                                     if (result == "SUCCESS") {
@@ -532,12 +532,12 @@
                                         })
 
 
-                                        //setTimeout(
-                                        //    function () {
-                                        //        var url = 'Url.Action("Binloc_master", "Inventory", new { idproj = ViewBag.project.ID_project, count=ViewBag.count })';
-                                        //        url = url.replace('amp;', '');
-                                        //         window.location.href = url;
-                                        //    }, 2000);
+                                        setTimeout(
+                                            function () {
+                                                var url = '@Url.Action("Purchase_Data", "Operations", null)';
+                                                url = url.replace('amp;', '');
+                                                 window.location.href = url;
+                                            }, 2000);
 
                                     } else {
 
